--- a/app/styles/elements/_modal.css
+++ b/app/styles/elements/_modal.css
@@ -85,12 +85,12 @@
     position: fixed;
     top: 0;
     left: 0;
+    bottom: 0;
     width: 100%;
-    max-height: 100vh;
     opacity: 0;
     pointer-events: none;
     padding: 110px 10px 10px;
-    transform: translateY(20vh) scale(.98);
+    transform: translateY(-20px) scale(.95);
     will-change: transform;
     transition: all .1s ease;
     pointer-events: none
