--- a/app/styles/components/balance.css
+++ b/app/styles/components/balance.css
@@ -1,22 +1,42 @@
-.balance-deposit {
-    padding: 10px;
+.balance-action {
+    padding: 20px 10px 10px;
 }
 
 
 .balance-qr {
-    padding: 20px 0
+    width: 100%;
+    display: flex;
 }
 
 
 .balance-deposit-address {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    width: calc(100% - 140px);
+}
+
+.balance-deposit-body {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
 
 .balance-deposit-address button {
-    background: transparent;
+    background: #FFF;
     box-shadow: $box-shadow-inputs;
-    padding: 20px;
+    overflow-wrap: break-word;
+    width: 100%;
+    padding: 4 10px;
+    justify-content: space-between;
+}
+
+.balance-deposit-address button span {
+    display: inline-block;
+    overflow-wrap: break-word;
+    width: calc(100% - 80px);
+    text-align: left;
+    font-size: .8em;
+
 }
