--- a/app/styles/elements/_buttons.css
+++ b/app/styles/elements/_buttons.css
@@ -18,8 +18,12 @@ button {
     transition: all .2s ease;
     border-radius: 4px;
     will-change: transform;
+    word-break: break-word;
 }
 
+button.lefttext {
+    text-align: left;
+}
 
 button.transparent {
     background: transparent
