--- a/app/styles/elements/_buttons.css
+++ b/app/styles/elements/_buttons.css
@@ -78,8 +78,11 @@ button.link:hover {
 .action {
     padding: 10px 10px 10px 20px;
     border-radius: 4px;
-    text-transform: uppercase;
     font-size: 14px;
+}
+
+.action:not(.normaltext) {
+    text-transform: uppercase;
 }
 
 .action > span {
