electrum vs native

--- a/app/styles/elements/_list.css
+++ b/app/styles/elements/_list.css
@@ -63,3 +63,7 @@ ul[class*=list] > li.enabling .coin-colorized {
     color: #FFF !important;
     fill: #FFF !important;
 }
+
+ul[class*=list] > li:hover code {
+    background: rgba(0,0,0,0.1)
+}
