--- a/app/styles/elements/_progress.css
+++ b/app/styles/elements/_progress.css
@@ -5,20 +5,40 @@
   ----
 */
 
-.c-progress {
+.progress_bar {
+    position: relative;
   -webkit-appearance: none;
-  height: 4px;
+  height: 6px;
   width: 100%;
-  overflow: hidden;
-  border-radius: 4px;
   transition: .12s ease-in-out;
+  margin-bottom: 20px;
+  &::-webkit-progress-bar {
+      background-color: $grey-lighter;
+      border-radius: 3px;
 
-  &::-webkit-progress-bar { background-color: $grey-lighter; }
+  }
   &::-webkit-progress-value {
     background-image: linear-gradient(90deg, #9300FF 0%, #5272E2 49%, #05E6B5 98%);
     box-shadow: inset 0 0 0 .5px rgba(255, 255, 255, .1);
-    border-radius: 4px;
+    border-radius: 3px;
+    overflow: hidden;
   }
 
   &__transparent::-webkit-progress-bar { background-color: rgba(255, 255, 255, .2); }
+}
+
+.progress_bar:after {
+    position: absolute;
+    top: 10px;
+    right: 0;
+  content: 'progress ' attr(value)' %';
+  font-size: 12px;
+}
+
+.progress_bar:before {
+    position: absolute;
+    left: 0;
+    top: 10px;
+  content: attr(data-amount);
+  font-size: 12px;
 }
