display notice for empty balances

--- a/app/styles/_variables.css
+++ b/app/styles/_variables.css
@@ -21,6 +21,7 @@ $grey-darker: #1A1A20;
 $red: #FF6159;
 $green: #05E6B5;
 $purple: #783FEA;
+$orange: orange;
 
 /* Typography */
 $font-size-default:    1em;
