--- a/app/styles/components/login.css
+++ b/app/styles/components/login.css
@@ -16,7 +16,12 @@
 }
 
 .login-newpassphrase {
-    margin-top: 20px;
+    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    text-decoration: underline;
 }
 
 .login-passphrase-notice {
@@ -59,6 +64,13 @@
     height: 180px;
     resize: none;
 }
+
+
+.login-passphrase-notice,
+.login-button {
+    width: 100%
+}
+
 
 .Placeholder {
     display: flex;
