review api and style

--- a/app/styles/_helpers.css
+++ b/app/styles/_helpers.css
@@ -106,7 +106,7 @@ code {
 }
 
 
-.MNZ > .coin-colorized { color: #242E3A!important; }
+.MNZ > .coin-colorized { color: #B92484!important; }
 .ADC > .coin-colorized { color: #3CB0E5!important; }
 .AEON > .coin-colorized { color: #164450!important; }
 .AMP > .coin-colorized { color: #048DD2!important; }
@@ -388,7 +388,7 @@ code {
 
 
 
-.MNZ .coin-bg { background-color: #242E3A!important }
+.MNZ .coin-bg { background-color: #B92484!important }
 .ADC .coin-bg { background-color: #3CB0E5!important; }
 .AEON .coin-bg { background-color: #164450!important; }
 .AMP .coin-bg { background-color: #048DD2!important; }
