--- a/app/styles/components/dashboard.css
+++ b/app/styles/components/dashboard.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     overflow: auto;
     align-items: center;
+    height: 100vh;
+
 }
 
 
@@ -13,46 +15,95 @@
 
 
 .dashboard-wallets-header {
-    height: 120px;
+    height: 400px;
+    flex-direction: column;
 }
-.dashboard-wallets-list {
-    max-height: calc(100vh - 120px);
+
+.dashboard-wallets-header h1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    font-size: 2em;
+    font-weight: 200
+}
+
+.dashboard-wallets-header h1 label {
+    font-size: 12px;
+    width: 100%;
+    text-transform: uppercase;
+    font-weight: 600
 }
 
 .dashboard-balances-pie {
-    width: 60px !important;
-    height: 60px !important;
+    width: 600px !important;
+    height: 200px !important;
     position: relative !important;
-    margin-left: -10px;
-    margin-bottom: -30px;
-    transform: scale(1.9);
     transform-origin: left center
 }
 
 .dashboard-balances-pie svg {
-    position: absolute;
-    bottom: 0;
+    transform: scale(2.8);
+    transform-origin: center 20%
 }
+
+.dashboard-wallets .dashboard-wallets-list {
+    height: calc(100vh - 400px);
+    overflow: auto;
+}
+
 
 
 /* context */
 
 .dashboard-empty {
-    padding: 20px;
-    background:  $danger;
-    color: #FFF
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 20px;
+    border-radius: 4px;
+    margin: 10px 20px;
+    color: #FFF;
+    height: 400px;
 }
 
-.dashboard-empty.dashboard-empty-balance {
-    background: $orange
+.dashboard-empty-logo ,
+.dashboard-empty-logo svg {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    fill: #FFF !important;
 }
+
+.dashboard-empty-logo svg {
+    position: absolute;
+    top: 0;
+    left: -20px;
+    transform: scale(3);
+    transform-origin: center 90%;
+    opacity: .2
+}
+
+.dashboard-empty-logo svg g { fill: #000 }
 
 .dashboard-empty h3 {
     text-align: center;
+    width: auto;
+    display: inline-block;
+    margin: 0px auto 20px auto;
+    border-bottom: 2px solid $danger;
+    color: $danger
+}
+
+.dashboard-empty-balance h3 {
+    color: $orange;
+    border-color: $orange
 }
 
 .dashboard-empty p {
-    opacity: .8
+    opacity: .8;
+    margin: 0
 }
 
 .dashboard-empty-centered {
