--- a/app/styles/components/trade.css
+++ b/app/styles/components/trade.css
@@ -10,8 +10,11 @@
     flex-grow: 1
 }
 .trade-body > [class*="action"] {
+    display: flex;
+    flex-direction: column;
     flex-grow: 1;
     overflow: auto;
+    height: 100px;
 }
 
 .trade-processing {
@@ -47,10 +50,10 @@
     justify-content: center;
     padding: 0;
     margin: 0;
-    color: $color-primary;
+    color: $color-dark;
     width: 100%;
     z-index: 1000;
-    background:$background-jaguar;
+    background:$background-dark;
 }
 
 .trade-type-item {
@@ -74,7 +77,7 @@
 .trade-wallet .trade-type-item-wallet,
 .trade-charts .trade-type-item-charts,
 .trade-orders .trade-type-item-orders {
-    background: #FFF;
+    background: #000;
     border-bottom-color: transparent;
     border-top-color: $grey;
     font-weight: 600;
@@ -114,13 +117,6 @@
     fill: $color-dark;
     transform: scale(1.1);
     transform-origin: top center
-}
-
-
-
-.wallet:not(.wallet-ready) {
-    opacity: 0;
-    transform: translateY(-100px);
 }
 
 
@@ -184,8 +180,6 @@
 .trade-orderbook {
     background: $color-dark;
     box-shadow: $box-shadow-inputs;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
     overflow: auto;
 }
 
@@ -197,13 +191,14 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 20px;
     bottom: 0px;
     left: 0;
     z-index: 100;
     transition: all .2s ease;
     will-change: transform;
     z-index: 1;
+    background: #000
 
 }
 
@@ -211,7 +206,6 @@
     flex-grow: 1;
     min-width: 100%;
     border-radius: 4px;
-    background: #FFF;
     color: $color-dark;
     display: flex;
     justify-content: space-between;
