--- a/app/styles/elements/_inputs.css
+++ b/app/styles/elements/_inputs.css
@@ -11,13 +11,15 @@ input,
 [contenteditable=true],
 select,
 textarea {
+    background: #000;
+    color: #FFF;
     font: inherit;
     outline: none;
     border: 0;
     /* Ensure focus on inputs doesn't allow app dragging */
     -webkit-app-region: no-drag;
     border-radius: 4px;
-    border: 1px solid transparent;
+    border: 2px solid rgba(256,256,256,0.2);
     box-shadow: $box-shadow-inputs;
 
 }
@@ -35,10 +37,14 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
 }
 
+input:hover,
+textarea:hover {
+    border: 2px solid #FFF;
+}
+
 input:focus,
 textarea:focus {
-    border: 1px solid #2188ff;
-    box-shadow: inset 0 1px 2px rgba(27,31,35,0.075), 0 0 0 0.2em rgba(3,102,214,0.3);
+    border: 2px solid #8A0EFB;
 }
 
 .select-container {
