--- a/app/styles/elements/_list.css
+++ b/app/styles/elements/_list.css
@@ -1,25 +1,49 @@
 
 ul[class*=list] {
+    position: relative;
     list-style: none;
-    display: flex;
-    flex-direction: column;
+    grid-gap: 10px;
     padding: 0;
     margin: 0;
     overflow: auto;
-    background: #FFF;
-    box-shadow: $box-shadow-inputs
+    background: $background-app;
+    padding: 20px;
+}
+
+ul[class*=list]:after {
+    content: "";
+    position: fixed;
+    width: 100%;
+    height: 6px;
+    box-shadow: 0px 10px 20px $background-app;
+    z-index: 10;
+    background:  $background-app
+}
+
+ul[class*=list] {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: 1fr auto auto;
+
+}
+
+ul[class*=list].singleColumn {
+    padding: 0;
+    grid-template-columns: repeat(1, 1fr);
+
 }
 
 ul[class*=list] > li {
     display: flex;
-    width: 100%;
+    height: 140px;
     flex-shrink: 0;
-    background-color: #FFF;
     box-shadow: 0 6px 20px rgba(0,0,0,.14);
     border-bottom: 1px solid $grey;
     transition: all .2s ease;
     will-change: transform;
     overflow: hidden;
+    border-radius: 4px;
+    background: $background-jaguar
 }
 
 ul[class*=list]:not(.noHover) > li  {
@@ -32,7 +56,7 @@ ul[class*=list] > li > a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    height: 80px;
+    height: 120px;
     text-decoration: none;
     width: 100%;
     padding: 0px 20px 0px 20px;
@@ -51,6 +75,7 @@ ul[class*=list] [class*="_action"] svg {
     height: 20px;
     left: 0;
     transition: transform .6s ease;
+    fill: rgba(256,256,256,0.5)
 }
 
 ul[class*=list] [class*="_action_loader"] {
