--- a/app/styles/components/trade.css
+++ b/app/styles/components/trade.css
@@ -53,7 +53,7 @@
     color: $color-dark;
     width: 100%;
     z-index: 1000;
-    background:$background-dark;
+    background: $background-app;
 }
 
 .trade-type-item {
@@ -77,7 +77,7 @@
 .trade-wallet .trade-type-item-wallet,
 .trade-charts .trade-type-item-charts,
 .trade-orders .trade-type-item-orders {
-    background: #000;
+    background: $background-dark;
     border-bottom-color: transparent;
     border-top-color: $grey;
     font-weight: 600;
@@ -198,7 +198,7 @@
     transition: all .2s ease;
     will-change: transform;
     z-index: 1;
-    background: #000
+    background: $background-dark
 
 }
 
