--- a/app/styles/elements/_inputs.css
+++ b/app/styles/elements/_inputs.css
@@ -19,7 +19,7 @@ textarea {
     /* Ensure focus on inputs doesn't allow app dragging */
     -webkit-app-region: no-drag;
     border-radius: 4px;
-    border: 2px solid rgba(256,256,256,0.2);
+    border: 2px solid #000;
     box-shadow: $box-shadow-inputs;
 
 }
