--- a/app/styles/components/wallet.css
+++ b/app/styles/components/wallet.css
@@ -5,11 +5,16 @@
 }
 
 .wallet-orderbooks {
+    position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    flex-grow: 1;
     height: 100vh;
-    background: #000
+    background: #000;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+    overflow: auto;
+
 }
 
 .wallet-orderbooks-chart {
@@ -31,7 +36,7 @@
     flex-direction: column;
     background: $background-dark;
     height: 100vh;
-    width: 600px;
+    min-width: 380px;
     transition: all .2s ease;
     transform: translateY(0);
     opacity: 1;
