--- a/app/styles/elements/_inputs.css
+++ b/app/styles/elements/_inputs.css
@@ -37,10 +37,10 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
 }
 
-input:hover,
+/* input:hover,
 textarea:hover {
     border: 2px solid #FFF;
-}
+} */
 
 input:focus,
 textarea:focus {
