--- a/app/styles/components/wallet.css
+++ b/app/styles/components/wallet.css
@@ -54,7 +54,7 @@
     border-radius: 50%;
     box-shadow: $box-shadow-inputs;
     transform: rotate(10deg);
-    padding: 4px;
+    overflow: hidden;
 }
 
 
